# llm-router

./: LICENSE  README.md  skills-lock.json
apps/api/: README.md  main.py
apps/api/app/: main.py
apps/api/app/catalog/: catalog.py  (+1 more)
apps/api/tests/: test_model_selection_fallback.py  test_scoring_engine.py
apps/server/: .env  README.md  docker-compose.yml  main.py  pyproject.toml
apps/server/app/: main.py
apps/server/app/api/: main.py
apps/server/app/api/dependencies/: orchestrator.py
apps/server/app/api/routes/: gateway.py
apps/server/app/api/schemas/: __init__.py
apps/server/app/catalog/: __init__.py  catalog.py  registry.py  types.py
apps/server/app/core/: settings.py
apps/server/app/db/: base.py  session.py
apps/server/app/db/models/: llm_model.py  llm_model_capability.py  llm_model_routing_settings.py  provider.py  provider_sync_run.py
apps/server/app/gateway/: classify.py  select.py
apps/server/app/providers/: base.py  demo_client.py  openai_discovery.py  openrouter_discovery.py
apps/server/app/providers/anthropic/: __init__.py  catalog.py  client.py  config.py
apps/server/app/providers/config/: __init__.py  deepseek.py  openrouter.py
apps/server/app/providers/deepseek/: __init__.py  catalog.py  client.py  mapper.py
apps/server/app/providers/groq/: __init__.py  catalog.py  client.py
apps/server/app/providers/openai/: catalog.py  client.py  config.py
apps/server/tests/: conftest.py  test_openai_discovery_client.py  test_openrouter_discovery_client.py
apps/web/: README.md  package-lock.json  package.json  skills-lock.json
(+120 files in other folders)
