[project]
name = "server"
version = "0.1.0"
description = "FastAPI service managed with uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.2.10",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.42.0",
]
